# clnrod

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  coffee.yml  pyproject.toml
.github/workflows/: ci.yml  latest_v26.06.yml  master_v26.06.yml  release.yml
src/: collect.rs  config.rs  hooks.rs  main.rs  notify.rs  parser.rs  rpc.rs  rules.pest  structs.rs  tasks.rs
tests/: pyproject.toml  test_clnrod.py  util.py
